fix: JGraphX SwingNode 模块加载修复 + 日志清理
- javafx-swing 改回 provided scope，通过模块路径显式加载
- 运行命令添加 --add-modules javafx.swing
- MindMapHandler 添加 ClassNotFoundException 优雅降级
- IdeaManager 日志级别降低为 debug 减少冗余日志
- CollectionManager 处理损坏 JSON 文件时静默恢复默认值
- create-release.bat 同步更新模块参数

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>